retrieveing facebook friends

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 # TODO remove:
-security.basic.enabled=false
+#security.basic.enabled=false
+spring.social.facebook.appId=120919445134966
+spring.social.facebook.appSecret=01d57d473513a55553d84015ea8fe912
+google.maps.api.key=AIzaSyB61sCvOkrvTlAioaf43fFB1MI7rQxntYM
