--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,8 @@
 #security.basic.enabled=false
 spring.social.facebook.appId=120919445134966
 spring.social.facebook.appSecret=01d57d473513a55553d84015ea8fe912
-google.maps.api.key=AIzaSyB61sCvOkrvTlAioaf43fFB1MI7rQxntYM
+spring.social.linkedin.appId=86trw5fv9dswjd
+spring.social.linkedin.appSecret=zdM5J6q7pkHQM73e
+spring.social.twitter.app-id=wH6I3TbIxXME4uZZCnYb0KXP3
+spring.social.twitter.appSecret=bcWHegnb2gJZco86jbFlOxkBgsEmBYlNDBr571PkEfVDOaQ1Zo
+google.maps.api.key=AIzaSyBxeFsHOkk2AEhkB2soI2rXD_qUMfzNCXg
