--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <java.version>1.8</java.version>
         <thymeleaf.version>3.0.3.RELEASE</thymeleaf.version>
         <thymeleaf-layout-dialect.version>2.2.1</thymeleaf-layout-dialect.version>
+   	<docker.image.prefix>springio</docker.image.prefix>
     </properties>
 
     <dependencies>
@@ -108,6 +109,22 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+	    <plugin>
+            	<groupId>com.spotify</groupId>
+            	<artifactId>docker-maven-plugin</artifactId>
+            	<version>0.4.11</version>
+            	<configuration>
+                	<imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+                	<dockerDirectory>src/main/docker</dockerDirectory>
+                	<resources>
+                    	<resource>
+                        	<targetPath>/</targetPath>
+                        	<directory>${project.build.directory}</directory>
+                        	<include>${project.build.finalName}.jar</include>
+                    	</resource>
+                	</resources>
+            	</configuration>
+             </plugin>
         </plugins>
     </build>
 
